src/objects/PostCode_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>AccountKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_key__c</fullName>
        <label>AccountKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PostCode Allocation</relationshipLabel>
        <relationshipName>PostCode_Allocation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Capacity_PSA__c</fullName>
        <description>Should be checked on pickvalue &apos;Capacity PSA&apos; under PSA Roles</description>
        <formula>ISPICKVAL( PSA_Roles__c , &apos;Capacity PSA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity PSA</label>
        <type>Checkbox</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_PSA__c</fullName>
        <formula>ISPICKVAL( PSA_Roles__c , &apos;Enquiry PSA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry PSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLatitude__c</fullName>
        <formula>Branch__r.Address_Latitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLatitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLongitude__c</fullName>
        <formula>Branch__r.Address_Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLongitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Roles__c</fullName>
        <label>PSA Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capacity PSA</fullName>
                </value>
                <value>
                    <fullName>Enquiry PSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PostCode_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PostCode Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>PSA_Roles__c</columns>
        <columns>PSA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PostalCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PostCode Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Postcode_Assignment_To_PSA_Roles</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( ISBLANK( VLOOKUP( $ObjectType.PostCode_Allocation__c.Fields.Name ,  $ObjectType.PostCode_Allocation__c.Fields.Name ,  Name ) ) ) , IF(  NOT( ISNEW() )  ,  IF( OR( Capacity_PSA__c =TRUE,  Enquiry_PSA__c =TRUE) , true, false) ,false ))</errorConditionFormula>
        <errorMessage>Postcode should not be assigned to more than one Enquiry and Capacity PSA</errorMessage>
    </validationRules>
</CustomObject>